2006-12-04  Per Bothner  <per@bothner.com>

	* kawa/standard/load.java (pply): Don't temporarily setBaseUri.

	* Makefile.am (patch-source-list): Change pattern so we catch
	files that only use #ifndef and not #ifdef,

	* configure.in (WITH_XQTS): Previous change not quite right.

2006-12-02  Per Bothner  <per@bothner.com>

	* configure.in (WITH_XQTS): Default to false.

2006-12-01  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.8.91.
	* build.xml (version.release): Likewise.

	* configure.in: Add support for JAVA_SOURCE=6.
	* Makefile.am (select-java6): New rule, which sets JAVA6 and
	use:java.text.Normalizer.

2006-11-27  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (lookup): New hasNamespace.
	* kawa/standard/require.java (importDefinitions): Inline getDefine.
	Do check for duplicate declaration using getNamespaceOf.
	Use ScopeExp.duplicateDeclarationError.

2006-11-22  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxRules.java: Rename Consumer methods append->write.
	* kawa/lang/Promise.java: Likewise.
	* kawa/lang/Lambda.java: Likewise.
	* kawa/lang/SyntaxPattern.java: Likewise.
	* kawa/lang/AnyPat.java: Likewise.
	* kawa/lang/PairPat.java: Likewise.
	* kawa/lang/Macro.java: Likewise.
	* kawa/lang/EqualPat.java: Likewise.
	* kawa/lang/ListPat.java: Likewise.
	* kawa/lang/ListRepeatPat.java: Likewise.
	* kawa/lang/Syntax.java: Likewise.
	* kawa/lang/VarListPat.java: Likewise.

2006-11-20  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxRules.java (print): Update since parameter is
	now a Consumer.
	* kawa/lang/Promise.java (print): Likewise.
	* kawa/lang/Lambda.java (print): Likewise.
	* kawa/lang/AnyPat.java (print): Likewise.
	* kawa/lang/PairPat.java (print): Likewise.
	* kawa/lang/EqualPat.java (print): Likewise.
	* kawa/lang/ListPat.java (print): Likewise.
	* kawa/lang/ListRepeatPat.java (print): Likewise.
	* kawa/lang/VarListPat.java (print): Likewise.
	* kawa/lang/Macro.java (print): Likewise.