@@ -1,3 +1,10 @@
+2006-12-04  Per Bothner  <per@bothner.com>
+
+	* ModuleManager.java (defaultClassLoader): New field, replaces
+	static field in kawa.repl.
+	(setCompilationDirectory, getCompilationDirectory): New methods.
+	* Compilation.java (process): Use getCompilationDirectory.
+
 2006-11-27  Per Bothner  <per@bothner.com>
 
 	* Language.java (hasNamespace): New method.
